--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^11.1.1"
   },
   "devDependencies": {
-    "node-sass": "^6.0.0",
-    "prop-types": "^15.7.2",
-    "sass-loader": "^11.1.1"
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
