--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^12.1.10",
     "leaflet": "^1.7.1",
     "leaflet-defaulticon-compatibility": "^0.1.1",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "node-sass": "^6.0.0",
-    "sass-loader": "^11.1.1"
+    "sass-loader": "^11.1.1",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "prop-types": "^15.7.2"
